Fix: Add scroll-padding-top to prevent navbar overlap

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-/* nav */
+html {
+  scroll-padding-top: 25px;  
+}
 
+/* nav */
 
 /* Hover effect for nav links */
 .navbar-nav .nav-link:hover {
@@ -67,10 +70,13 @@
 }
 
 /* About Section */
+
+
 .about {
     text-align: center;
     background-color: #111; 
     padding: 50px 20px;
+    
 }
 
 .about h2 {
